<resources>
    <string name="app_name">JQuizMobile</string>
    <string name="title_activity_start_screen">StartScreenActivity</string>

    <string name="action_settings">Settings</string>
    <string name="jquiz_label_text">JQuiz</string>
    <string name="start_button_text">Start</string>
    <string name="highscore_button_text">Highscore</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="answer_button_text">Answer</string>
    <string name="title_activity_final_screen">FinalScreenActivity</string>
    <string name="results">Results</string>
    <string name="try_again">Try again</string>
    <string name="score">Score:</string>
    <string name="question_transition">question_transition</string>
    <string name="title_activity_highscore">HighscoreActivity</string>
    <string name="user_name">Name</string>
    <string name="user_score">Score</string>
    <string name="share_button_text">Share</string>
</resources>
