<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                tools:context="org.jquizmobile.app.StartScreenActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" android:layout_centerHorizontal="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/jquiz_label_text"
                android:id="@+id/jQuizLabelView"
                android:layout_gravity="center_horizontal"/>
        <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/start_button_text"
                android:textColor="@color/abc_primary_text_material_dark"
                android:id="@+id/startButton"
                android:layout_marginTop="50dp"
                android:onClick="onStartClicked"/>
        <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/highscore_button_text"
                android:textColor="@color/abc_primary_text_material_dark"
                android:id="@+id/highscoreButton"
                android:layout_marginTop="50dp"
                android:onClick="onHighscoreClicked"/>
    </LinearLayout>
</RelativeLayout>
