<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="org.jquizmobile.app.HighscoreActivity"
                android:background="@color/primary_background_color">
    <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/highscore_card"
            card_view:cardCornerRadius="@dimen/card_radius"
            card_view:cardElevation="@dimen/card_elevation"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">
        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    style="@style/MainTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/highscore_button_text"
                    android:id="@+id/highscore_text_view"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/view_margin_top"
                    android:layout_marginBottom="@dimen/view_margin_bottom"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/divider"
                    style="@style/AppTheme.Divider"/>
            <TableLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/highscore_table_layout">
                <TableRow>
                    <TextView
                            android:text="@string/user_name"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            style="@style/SecondaryTitle"
                            android:paddingBottom="@dimen/content_layout_padding"
                            android:paddingLeft="@dimen/content_layout_padding"
                            android:paddingRight="@dimen/content_layout_padding"/>
                    <TextView
                            android:text="@string/user_score"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            style="@style/SecondaryTitle"
                            android:paddingBottom="@dimen/content_layout_padding"
                            android:paddingLeft="@dimen/content_layout_padding"
                            android:paddingRight="@dimen/content_layout_padding"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
